# clap4shell

./: .envrc  .gitattributes  Cargo.nix  Cargo.toml  README.md  example.sh  flake.nix
.github/workflows/: ci.yaml
src/: main.rs
