[package]
name = "clap4shell"
description = "rich getopts replacement for shell script"
homepage = "https://github.com/fumieval/clap4shell"
version = "0.3.1"
authors = ["Fumiaki Kinoshita <fumiexcel@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["env"] }
yaml-rust = "0.4.5"
serde_yaml = "0.9.10"
clap-serde = { git = "https://github.com/fumieval/clap-serde", features = ["env"] }
clap_complete = { version = "3.2.4" }
